--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@
     justify-content: center;
     align-items: center;
     border-radius: 10px;
- 
+    box-shadow: 0 0 10px black;
 }
 .calculator .form input{
   border: 0;
